--- a/HMI/iPadControls/WaterSkin/waterskin.storyboard
+++ b/HMI/iPadControls/WaterSkin/waterskin.storyboard
@@ -107,31 +107,6 @@
                                     <action selector="readPumpDetails:" destination="xYq-iO-ENh" eventType="touchUpInside" id="tgV-hE-M1u"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oG7-zE-PFO" userLabel="BackWashSpeed">
-                                <rect key="frame" x="528" y="377" width="92" height="23"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BACK WASH" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ph9-Xm-WaG">
-                                        <rect key="frame" x="34" y="20" width="87" height="29"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9nY-pm-JaK">
-                                        <rect key="frame" x="35" y="0.0" width="71" height="23"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="19"/>
-                                        <color key="textColor" red="0.0" green="0.66666666669999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrowLeft" translatesAutoresizingMaskIntoConstraints="NO" id="z8A-Xn-1Z9">
-                                        <rect key="frame" x="8" y="0.0" width="23" height="24"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ocs-7N-3f8">
                                 <rect key="frame" x="509" y="117" width="18" height="11"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -142,10 +117,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.13725490200000001" green="0.13725490200000001" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="WATERSKIN" id="iKr-Nf-1UW"/>
+                    <navigationItem key="navigationItem" title="WATERSKIN PUMPS" id="iKr-Nf-1UW"/>
                     <connections>
-                        <outlet property="bwashSpeedIndicator" destination="oG7-zE-PFO" id="XJd-65-6Xp"/>
-                        <outlet property="bwashSpeedIndicatorValue" destination="9nY-pm-JaK" id="q4Y-M4-pQn"/>
                         <outlet property="frequencyIndicator" destination="ZwH-ay-Xze" id="Tl6-5Q-SLv"/>
                         <outlet property="frequencyIndicatorValue" destination="Y31-YF-4gN" id="sf2-Uj-AtY"/>
                         <outlet property="frequencySetpointBackground" destination="aK7-rU-zo4" id="NeJ-I2-ZXk"/>
@@ -503,7 +476,6 @@
     <resources>
         <image name="WETLogo" width="138" height="36"/>
         <image name="WeekTimeInterval12" width="2640" height="167"/>
-        <image name="arrowLeft" width="20.159999847412109" height="20.879999160766602"/>
         <image name="arrowRight" width="20.159999847412109" height="20.879999160766602"/>
         <image name="backgroundSquare" width="61" height="62"/>
         <image name="button_background" width="130.08000183105469" height="30"/>
